--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,16 @@
+include <iostream>
+using namespace std;
 
-# Created by https://www.toptal.com/developers/gitignore/api/osx
-# Edit at https://www.toptal.com/developers/gitignore?templates=osx
+int main()
+{
+    int a,b;
+    cin >> a >> b;
 
-### OSX ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+    if (a == b)
+        cout << "=";
+    else if (a > b)
+        cout << "a";
+    else cout << "b";
 
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# End of https://www.toptal.com/developers/gitignore/api/osx
+    system("pause");
+}
